--- a/HealthyRecipes/app/src/main/res/layout/content_main.xml
+++ b/HealthyRecipes/app/src/main/res/layout/content_main.xml
@@ -8,13 +8,35 @@
     tools:context="com.example.instructor.healthyrecipes.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <TextView
+    <EditText
+        android:id="@+id/txtTitle"
+        android:layout_width="331dp"
+        android:layout_height="64dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="@string/txtTitle"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="40dp"
+        tools:layout_editor_absoluteY="27dp"
+        tools:textAlignment="center"
+        tools:textSize="36sp" />
+
+    <ImageView
+        android:id="@+id/imgRecipe"
+        android:layout_width="332dp"
+        android:layout_height="272dp"
+        android:contentDescription="@string/description"
+        app:srcCompat="@drawable/bruschetta"
+        tools:layout_editor_absoluteX="39dp"
+        tools:layout_editor_absoluteY="105dp" />
+
+    <Button
+        android:id="@+id/btnRecipe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="@string/btnRecipe"
+        tools:layout_editor_absoluteX="86dp"
+        tools:layout_editor_absoluteY="443dp"
+        tools:textSize="36sp" />
 
 </android.support.constraint.ConstraintLayout>
